--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -23,7 +23,7 @@
 							</li>
 							<li>
 								<a href="companies.html" title="">
-									<span><img src="images/icon2.png" alt=""></span>
+									<span><img src="<%= asset_path 'icon2.png' %>" alt=""></span>
 									Companies
 								</a>
 								<ul>
@@ -33,13 +33,13 @@
 							</li>
 							<li>
 								<a href="projects.html" title="">
-									<span><img src="images/icon3.png" alt=""></span>
+									<span><img src="<%= asset_path 'icon3.png' %>" alt=""></span>
 									Projects
 								</a>
 							</li>
 							<li>
 								<a href="profiles.html" title="">
-									<span><img src="images/icon4.png" alt=""></span>
+									<span><img src="<%= asset_path 'icon4.png' %>" alt=""></span>
 									Profiles
 								</a>
 								<ul>
@@ -49,13 +49,13 @@
 							</li>
 							<li>
 								<a href="jobs.html" title="">
-									<span><img src="images/icon5.png" alt=""></span>
+									<span><img src="<%= asset_path 'icon5.png' %>" alt=""></span>
 									Jobs
 								</a>
 							</li>
 							<li>
 								<a href="#" title="" class="not-box-openm">
-									<span><img src="images/icon6.png" alt=""></span>
+									<span><img src="<%= asset_path 'icon6.png' %>" alt=""></span>
 									Messages
 								</a>
 								<div class="notification-box msg" id="message">
@@ -102,7 +102,7 @@
 							</li>
 							<li>
 								<a href="#" title="" class="not-box-open">
-									<span><img src="images/icon7.png" alt=""></span>
+									<span><img src="<%= asset_path 'icon7.png' %>" alt=""></span>
 									Notification
 								</a>
 								<div class="notification-box noti" id="notification">
@@ -353,8 +353,8 @@
 											</div>
 											<div class="epi-sec">
 												<ul class="descp">
-													<li><img src="images/icon8.png" alt=""><span>Epic Coder</span></li>
-													<li><img src="images/icon9.png" alt=""><span>India</span></li>
+													<li><img src="<%= asset_path 'icon8.png' %>" alt=""><span>Epic Coder</span></li>
+													<li><img src="<%= asset_path 'icon9.png' %>" alt=""><span>India</span></li>
 												</ul>
 												<ul class="bk-links">
 													<li><a href="#" title=""><i class="la la-bookmark"></i></a></li>
