--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,17 +15,19 @@
 
  *= require_tree .
  *= require_self
+
  *= require workwise/animate
  *= require workwise/bootstrap
- *= require workwise/flatpickr.min
- *= require workwise/jquery.mCustomScrollbar.min
  *= require workwise/line-awesome
  *= require workwise/line-awesome-font-awesome
  *= require css/all
  *= require workwise/font-awesome.min
+ *= require workwise/jquery.mCustomScrollbar.min
+ *= require slick
+ *= require slick-theme
  *= require workwise/style
  *= require workwise/responsive
- *= require slick
- *= require font-awesome
+
+ * require workwise/flatpickr.min
 
  */
