--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -3,7 +3,7 @@
  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
  </head>
  <body>
- <h1>Salut <%= @user.name %> et bienvenue chez nous !</h1>
+ <h1>Salut <%= @user.email %> et bienvenue chez nous !</h1>
  <p>
  Tu t'es inscrit sur myedukado en utilisant l'e-mail suivant : <%= @user.email %>.
  </p>
